--- a/src/scss/blocks/_404.scss
+++ b/src/scss/blocks/_404.scss
@@ -2,7 +2,7 @@
   background-image: url('../img/404.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 70vh;
+  min-height: 800px;
   padding-top: 92px;
 
   @media (max-width: 992px) {
