--- a/src/scss/blocks/_ship.scss
+++ b/src/scss/blocks/_ship.scss
@@ -43,6 +43,12 @@
       }
     }
   }
+
+  &:last-child {
+    .ship-block-item:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .ship-block-item {
