--- a/src/scss/blocks/_catalog.scss
+++ b/src/scss/blocks/_catalog.scss
@@ -69,6 +69,7 @@
     @media (max-width: 992px) {
       width: 100%;
       display: none;
+      overflow-y: auto;
 
       &.is-opened {
         position: fixed;
@@ -208,6 +209,7 @@
 .brand-info {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
 
   &__text {
     width: calc(100% - 220px);
@@ -215,6 +217,14 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 1.8;
+
+    @media (max-width: 767px) {
+      width: 100%;
+      padding-right: 0;
+      padding-top: 20px;
+      padding-bottom: 40px;
+      order: 2;
+    }
   }
 
   &__logo {
@@ -222,6 +232,12 @@
 
     img {
       width: 100%;
+    }
+
+    @media (max-width: 767px) {
+      width: 100%;
+      min-width: 100%;
+      order: 1;
     }
   }
 }
