--- a/src/scss/blocks/_features.scss
+++ b/src/scss/blocks/_features.scss
@@ -67,6 +67,7 @@
 
   &__text {
     width: 740px;
+    position: relative;
 
     @media (max-width: 1340px) {
       width: 500px;
@@ -78,12 +79,16 @@
   }
 
   .swiper-slide {
-    padding: 40px 40px 0 0;
+    padding: 0 40px 0 0;
   }
 
   .main-features__num--right {
-    top: 0;
-    right: 0;
+    top: -80px;
+    right: 50px;
+
+    @media (max-width: 992px) {
+      right: 0;
+    }
   }
 
   .swiper-button-next {
