--- a/src/scss/blocks/_news.scss
+++ b/src/scss/blocks/_news.scss
@@ -26,6 +26,17 @@
     top: 20px;
     right: 0;
     display: flex;
+    align-items: center;
+
+    a {
+      position: relative;
+      top: -10px;
+      right: 20px;
+      text-decoration: underline;
+      font-size: 16px;
+      font-family: 'Gilroy';
+      font-weight: 500;
+    }
 
     .swiper-button-next {
       background-image: url("data:image/svg+xml,%3Csvg width='45' height='44' viewBox='0 0 45 44' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='0.970703' width='43.0323' height='43.0323' fill='black'/%3E%3Cpath d='M18.7988 13.5244L26.7905 21.5161L18.7988 29.5078' stroke='white'/%3E%3C/svg%3E%0A");
