--- a/src/scss/blocks/_pages.scss
+++ b/src/scss/blocks/_pages.scss
@@ -14,7 +14,7 @@
     margin-right: 30px;
   }
 
-  &--selected {
+  &.is-selected {
     color: #0B0B0B;
     font-size: 20px;
     font-weight: 700;
@@ -32,6 +32,10 @@
     line-height: 1.2;
     font-family: 'Gilroy';
     text-transform: uppercase;
+    
+    &.is-normal-case {
+      text-transform: none;
+    }
 
     &.bigger {
       font-size: 50px;
@@ -87,6 +91,7 @@
 .section-page-header {
   height: 328px;
   position: relative;
+  margin-bottom: 60px;
 
   .container {
     height: 100%;
@@ -132,6 +137,24 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+  }
+
+  &.is-news-page {
+    @media (max-width: 767px) {
+      height: auto;
+      img {
+        position: static;
+        height: auto;
+      }
+    }
+  }
+
+  @media (max-width: 767px) {
+    height: 160px;
+
+    img {
+      object-position: 60%;
+    }
   }
 }
 
@@ -385,6 +408,14 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+
+    @media (max-width: 767px) {
+      height: auto;
+
+      img {
+        height: auto;
+      }
     }
   }
 
